rulesParser.py
# Generated from rules.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class rulesParser ( Parser ):

    grammarFileName = "rules.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "','", "';'", "'read'", "'write'", "'{'", 
                     "'}'", "'if'", "'('", "')'", "'else'", "'while'", "'fopen'", 
                     "'fopen2'", "'<<'", "'fappend'", "'for'", "'do'", "'++'", 
                     "'--'", "'break'", "'continue'", "'int'", "'float'", 
                     "'bool'", "'string'", "'FILE'", "'char'", "'-'", "'!'", 
                     "'*'", "'/'", "'%'", "'+'", "'.'", "'<'", "'>'", "'=='", 
                     "'!='", "'&&'", "'||'", "'?'", "':'", "'='", "'['", 
                     "']'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "BOOL", "ID", "FLOAT", "INT", 
                      "OCT", "HEXA", "STRING", "COMMENT", "WS" ]

    RULE_prog = 0
    RULE_stat = 1
    RULE_type_spec = 2
    RULE_expr = 3

    ruleNames =  [ "prog", "stat", "type_spec", "expr" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    BOOL=46
    ID=47
    FLOAT=48
    INT=49
    OCT=50
    HEXA=51
    STRING=52
    COMMENT=53
    WS=54

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(rulesParser.StatContext)
            else:
                return self.getTypedRuleContext(rulesParser.StatContext,i)


        def getRuleIndex(self):
            return rulesParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = rulesParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 9 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 8
                self.stat()
                self.state = 11 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 8936831583500732) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return rulesParser.RULE_stat

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ReadStatContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a rulesParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(rulesParser.ID)
            else:
                return self.getToken(rulesParser.ID, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReadStat" ):
                listener.enterReadStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReadStat" ):
                listener.exitReadStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReadStat" ):
                return visitor.visitReadStat(self)
            else:
                return visitor.visitChildren(self)


    class IfStatContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a rulesParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(rulesParser.ExprContext,0)

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(rulesParser.StatContext)
            else:
                return self.getTypedRuleContext(rulesParser.StatContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStat" ):
                listener.enterIfStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStat" ):
                listener.exitIfStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStat" ):
                return visitor.visitIfStat(self)
            else:
                return visitor.visitChildren(self)


    class DoWhileStatContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a rulesParser.StatContext
            super().__init__(parser)
            self.body = None # StatContext
            self.cond = None # ExprContext
            self.copyFrom(ctx)

        def stat(self):
            return self.getTypedRuleContext(rulesParser.StatContext,0)

        def expr(self):
            return self.getTypedRuleContext(rulesParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDoWhileStat" ):
                listener.enterDoWhileStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDoWhileStat" ):
                listener.exitDoWhileStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDoWhileStat" ):
                return visitor.visitDoWhileStat(self)
            else:
                return visitor.visitChildren(self)


    class BlockStatContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a rulesParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(rulesParser.StatContext)
            else:
                return self.getTypedRuleContext(rulesParser.StatContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlockStat" ):
                listener.enterBlockStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlockStat" ):
                listener.exitBlockStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlockStat" ):
                return visitor.visitBlockStat(self)
            else:
                return visitor.visitChildren(self)


    class ExprStatContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a rulesParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(rulesParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprStat" ):
                listener.enterExprStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprStat" ):
                listener.exitExprStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprStat" ):
                return visitor.visitExprStat(self)
            else:
                return visitor.visitChildren(self)


    class ContinueStatContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a rulesParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterContinueStat" ):
                listener.enterContinueStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitContinueStat" ):
                listener.exitContinueStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitContinueStat" ):
                return visitor.visitContinueStat(self)
            else:
                return visitor.visitChildren(self)


    class IncrementContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a rulesParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(rulesParser.ID, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIncrement" ):
                listener.enterIncrement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIncrement" ):
                listener.exitIncrement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIncrement" ):
                return visitor.visitIncrement(self)
            else:
                return visitor.visitChildren(self)


    class FopenStatContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a rulesParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(rulesParser.ID, 0)
        def STRING(self):
            return self.getToken(rulesParser.STRING, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFopenStat" ):
                listener.enterFopenStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFopenStat" ):
                listener.exitFopenStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFopenStat" ):
                return visitor.visitFopenStat(self)
            else:
                return visitor.visitChildren(self)


    class FopenStat2Context(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a rulesParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(rulesParser.ID, 0)
        def STRING(self):
            return self.getToken(rulesParser.STRING, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFopenStat2" ):
                listener.enterFopenStat2(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFopenStat2" ):
                listener.exitFopenStat2(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFopenStat2" ):
                return visitor.visitFopenStat2(self)
            else:
                return visitor.visitChildren(self)


    class BreakStatContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a rulesParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBreakStat" ):
                listener.enterBreakStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBreakStat" ):
                listener.exitBreakStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBreakStat" ):
                return visitor.visitBreakStat(self)
            else:
                return visitor.visitChildren(self)


    class DeclarationContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a rulesParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def type_spec(self):
            return self.getTypedRuleContext(rulesParser.Type_specContext,0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(rulesParser.ID)
            else:
                return self.getToken(rulesParser.ID, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration" ):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)


    class FappendStatContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a rulesParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(rulesParser.ID, 0)
        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(rulesParser.ExprContext)
            else:
                return self.getTypedRuleContext(rulesParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFappendStat" ):
                listener.enterFappendStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFappendStat" ):
                listener.exitFappendStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFappendStat" ):
                return visitor.visitFappendStat(self)
            else:
                return visitor.visitChildren(self)


    class ForStatContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a rulesParser.StatContext
            super().__init__(parser)
            self.init = None # ExprContext
            self.cond = None # ExprContext
            self.step = None # ExprContext
            self.body = None # StatContext
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(rulesParser.ExprContext)
            else:
                return self.getTypedRuleContext(rulesParser.ExprContext,i)

        def stat(self):
            return self.getTypedRuleContext(rulesParser.StatContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForStat" ):
                listener.enterForStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForStat" ):
                listener.exitForStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForStat" ):
                return visitor.visitForStat(self)
            else:
                return visitor.visitChildren(self)


    class WriteFileStatContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a rulesParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(rulesParser.ID, 0)
        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(rulesParser.ExprContext)
            else:
                return self.getTypedRuleContext(rulesParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWriteFileStat" ):
                listener.enterWriteFileStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWriteFileStat" ):
                listener.exitWriteFileStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWriteFileStat" ):
                return visitor.visitWriteFileStat(self)
            else:
                return visitor.visitChildren(self)


    class DecrementContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a rulesParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(rulesParser.ID, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecrement" ):
                listener.enterDecrement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecrement" ):
                listener.exitDecrement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecrement" ):
                return visitor.visitDecrement(self)
            else:
                return visitor.visitChildren(self)


    class EmptyStatContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a rulesParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEmptyStat" ):
                listener.enterEmptyStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEmptyStat" ):
                listener.exitEmptyStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEmptyStat" ):
                return visitor.visitEmptyStat(self)
            else:
                return visitor.visitChildren(self)


    class WriteStatContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a rulesParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(rulesParser.ExprContext)
            else:
                return self.getTypedRuleContext(rulesParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWriteStat" ):
                listener.enterWriteStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWriteStat" ):
                listener.exitWriteStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWriteStat" ):
                return visitor.visitWriteStat(self)
            else:
                return visitor.visitChildren(self)


    class WhileStatContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a rulesParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(rulesParser.ExprContext,0)

        def stat(self):
            return self.getTypedRuleContext(rulesParser.StatContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileStat" ):
                listener.enterWhileStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileStat" ):
                listener.exitWhileStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileStat" ):
                return visitor.visitWhileStat(self)
            else:
                return visitor.visitChildren(self)



    def stat(self):

        localctx = rulesParser.StatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stat)
        self._la = 0 # Token type
        try:
            self.state = 134
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                localctx = rulesParser.DeclarationContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 13
                self.type_spec()
                self.state = 14
                self.match(rulesParser.ID)
                self.state = 19
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==1:
                    self.state = 15
                    self.match(rulesParser.T__0)
                    self.state = 16
                    self.match(rulesParser.ID)
                    self.state = 21
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 22
                self.match(rulesParser.T__1)
                pass

            elif la_ == 2:
                localctx = rulesParser.ExprStatContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 24
                self.expr(0)
                self.state = 25
                self.match(rulesParser.T__1)
                pass

            elif la_ == 3:
                localctx = rulesParser.ReadStatContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 27
                self.match(rulesParser.T__2)
                self.state = 28
                self.match(rulesParser.ID)
                self.state = 33
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==1:
                    self.state = 29
                    self.match(rulesParser.T__0)
                    self.state = 30
                    self.match(rulesParser.ID)
                    self.state = 35
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 36
                self.match(rulesParser.T__1)
                pass

            elif la_ == 4:
                localctx = rulesParser.WriteStatContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 37
                self.match(rulesParser.T__3)
                self.state = 38
                self.expr(0)
                self.state = 43
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==1:
                    self.state = 39
                    self.match(rulesParser.T__0)
                    self.state = 40
                    self.expr(0)
                    self.state = 45
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 46
                self.match(rulesParser.T__1)
                pass

            elif la_ == 5:
                localctx = rulesParser.BlockStatContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 48
                self.match(rulesParser.T__4)
                self.state = 52
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 8936831583500732) != 0):
                    self.state = 49
                    self.stat()
                    self.state = 54
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 55
                self.match(rulesParser.T__5)
                pass

            elif la_ == 6:
                localctx = rulesParser.IfStatContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 56
                self.match(rulesParser.T__6)
                self.state = 57
                self.match(rulesParser.T__7)
                self.state = 58
                self.expr(0)
                self.state = 59
                self.match(rulesParser.T__8)
                self.state = 60
                self.stat()
                self.state = 63
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
                if la_ == 1:
                    self.state = 61
                    self.match(rulesParser.T__9)
                    self.state = 62
                    self.stat()


                pass

            elif la_ == 7:
                localctx = rulesParser.WhileStatContext(self, localctx)
                self.enterOuterAlt(localctx, 7)
                self.state = 65
                self.match(rulesParser.T__10)
                self.state = 66
                self.match(rulesParser.T__7)
                self.state = 67
                self.expr(0)
                self.state = 68
                self.match(rulesParser.T__8)
                self.state = 69
                self.stat()
                pass

            elif la_ == 8:
                localctx = rulesParser.FopenStatContext(self, localctx)
                self.enterOuterAlt(localctx, 8)
                self.state = 71
                self.match(rulesParser.T__11)
                self.state = 72
                self.match(rulesParser.ID)
                self.state = 73
                self.match(rulesParser.STRING)
                self.state = 74
                self.match(rulesParser.T__1)
                pass

            elif la_ == 9:
                localctx = rulesParser.FopenStat2Context(self, localctx)
                self.enterOuterAlt(localctx, 9)
                self.state = 75
                self.match(rulesParser.T__12)
                self.state = 76
                self.match(rulesParser.ID)
                self.state = 77
                self.match(rulesParser.T__0)
                self.state = 78
                self.match(rulesParser.STRING)
                self.state = 79
                self.match(rulesParser.T__1)
                pass

            elif la_ == 10:
                localctx = rulesParser.WriteFileStatContext(self, localctx)
                self.enterOuterAlt(localctx, 10)
                self.state = 80
                self.match(rulesParser.ID)
                self.state = 81
                self.match(rulesParser.T__13)
                self.state = 82
                self.expr(0)
                self.state = 87
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==14:
                    self.state = 83
                    self.match(rulesParser.T__13)
                    self.state = 84
                    self.expr(0)
                    self.state = 89
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 90
                self.match(rulesParser.T__1)
                pass

            elif la_ == 11:
                localctx = rulesParser.FappendStatContext(self, localctx)
                self.enterOuterAlt(localctx, 11)
                self.state = 92
                self.match(rulesParser.T__14)
                self.state = 93
                self.match(rulesParser.ID)
                self.state = 94
                self.match(rulesParser.T__0)
                self.state = 95
                self.expr(0)
                self.state = 100
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==1:
                    self.state = 96
                    self.match(rulesParser.T__0)
                    self.state = 97
                    self.expr(0)
                    self.state = 102
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 103
                self.match(rulesParser.T__1)
                pass

            elif la_ == 12:
                localctx = rulesParser.ForStatContext(self, localctx)
                self.enterOuterAlt(localctx, 12)
                self.state = 105
                self.match(rulesParser.T__15)
                self.state = 106
                self.match(rulesParser.T__7)
                self.state = 107
                localctx.init = self.expr(0)
                self.state = 108
                self.match(rulesParser.T__1)
                self.state = 109
                localctx.cond = self.expr(0)
                self.state = 110
                self.match(rulesParser.T__1)
                self.state = 111
                localctx.step = self.expr(0)
                self.state = 112
                self.match(rulesParser.T__8)
                self.state = 113
                localctx.body = self.stat()
                pass

            elif la_ == 13:
                localctx = rulesParser.DoWhileStatContext(self, localctx)
                self.enterOuterAlt(localctx, 13)
                self.state = 115
                self.match(rulesParser.T__16)
                self.state = 116
                localctx.body = self.stat()
                self.state = 117
                self.match(rulesParser.T__10)
                self.state = 118
                self.match(rulesParser.T__7)
                self.state = 119
                localctx.cond = self.expr(0)
                self.state = 120
                self.match(rulesParser.T__8)
                self.state = 121
                self.match(rulesParser.T__1)
                pass

            elif la_ == 14:
                localctx = rulesParser.IncrementContext(self, localctx)
                self.enterOuterAlt(localctx, 14)
                self.state = 123
                self.match(rulesParser.ID)
                self.state = 124
                self.match(rulesParser.T__17)
                self.state = 125
                self.match(rulesParser.T__1)
                pass

            elif la_ == 15:
                localctx = rulesParser.DecrementContext(self, localctx)
                self.enterOuterAlt(localctx, 15)
                self.state = 126
                self.match(rulesParser.ID)
                self.state = 127
                self.match(rulesParser.T__18)
                self.state = 128
                self.match(rulesParser.T__1)
                pass

            elif la_ == 16:
                localctx = rulesParser.BreakStatContext(self, localctx)
                self.enterOuterAlt(localctx, 16)
                self.state = 129
                self.match(rulesParser.T__19)
                self.state = 130
                self.match(rulesParser.T__1)
                pass

            elif la_ == 17:
                localctx = rulesParser.ContinueStatContext(self, localctx)
                self.enterOuterAlt(localctx, 17)
                self.state = 131
                self.match(rulesParser.T__20)
                self.state = 132
                self.match(rulesParser.T__1)
                pass

            elif la_ == 18:
                localctx = rulesParser.EmptyStatContext(self, localctx)
                self.enterOuterAlt(localctx, 18)
                self.state = 133
                self.match(rulesParser.T__1)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Type_specContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return rulesParser.RULE_type_spec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType_spec" ):
                listener.enterType_spec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType_spec" ):
                listener.exitType_spec(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType_spec" ):
                return visitor.visitType_spec(self)
            else:
                return visitor.visitChildren(self)




    def type_spec(self):

        localctx = rulesParser.Type_specContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_type_spec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 264241152) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return rulesParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class StringIndexContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a rulesParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(rulesParser.ID, 0)
        def expr(self):
            return self.getTypedRuleContext(rulesParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStringIndex" ):
                listener.enterStringIndex(self)
